--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <div class="section select-config">
                 <div>
                     <label for="layout-default">
-                        <img class="layouts-config-container" src="images/layouts/layout-default.png" alt="layout-default.png"><br>
+                        <img class="layouts-config-container" src="images/layouts/layout-default.png"
+                            alt="layout-default.png"><br>
                     </label>
                     <label for="layout-default">Layout-default</label>
                     <input type="radio" name="layout" id="layout-default" value="layout-default">
@@ -394,6 +395,10 @@
                 <label for="">CPF</label><br>
                 <input class="input-text" type="text" id="blankFieldCpf" name=""><br>
             </div>
+            <h2 class="section-title">Rating</h2>
+            <div id="rating-container">
+            </div>
+            <input class="plusBtn" type="button" id="addRatingFields" value="+">
         </div>
     </div>
     <div class="generatorBtn">
