--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                     value="true">
                 <label for="topBarEnable" class="enableBtn"></label>
                 <div>
-                    <img id="topBarEnableImg" src="" alt="" style="background-color: green;" width="245px" height="160px">
+                    <img id="topBarEnableImg" src="images/topBar/topBarOn.png" alt="topBarOn.png" width="400px" height="470px">
                 </div>
                 <div>
-                    <img id="topBarDisableImg" src="" alt="" style="background-color: red;" width="245px" height="160px">
+                    <img id="topBarDisableImg" src="images/topBar/topBarOff.png" alt="topBarOff.png"width="400px" height="470px">
                 </div>
             </div>
             <h2 class="section-title">Operator</h2>
@@ -437,7 +437,9 @@
         </div>
     </div>
     <div class="generatorBtn">
-        <input type="button" class="buttons" id="generatorBtn" value="Gerar Arquivo">
+        <input type="button" class="buttons" id="copy" value="Copiar" style="margin: 0 10px;">
+        <input type="button" class="buttons" id="download" value="Download" style="margin: 0 10px;">
+        <input type="button" class="buttons" id="generatorBtn" value="Gerar Arquivo" style="margin: 0 10px;">
     </div>
     <div style="background-color: rgb(45,43, 85);border: 16px solid rgb(40,40,78);">
         <p class="output" id="output"></p>
